version/1.2/_sources/API/visualization/_autosummary/ansys.aedt.core.visualization.report.standard.Spectral.rst.txt
Spectral
========

.. currentmodule:: ansys.aedt.core.visualization.report.standard

.. autoclass:: Spectral

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Spectral.add_cartesian_x_marker
      
      
      Spectral.add_cartesian_y_marker
      
      
      Spectral.add_limit_line_from_equation
      
      
      Spectral.add_limit_line_from_points
      
      
      Spectral.add_note
      
      
      Spectral.add_trace_characteristics
      
      
      Spectral.add_trace_to_report
      
      
      Spectral.apply_report_template
      
      
      Spectral.create
      
      
      Spectral.delete
      
      
      Spectral.delete_traces
      
      
      Spectral.edit_general_settings
      
      
      Spectral.edit_grid
      
      
      Spectral.edit_header
      
      
      Spectral.edit_legend
      
      
      Spectral.edit_x_axis
      
      
      Spectral.edit_x_axis_scaling
      
      
      Spectral.edit_y_axis
      
      
      Spectral.edit_y_axis_scaling
      
      
      Spectral.export_config
      
      
      Spectral.export_table_to_file
      
      
      Spectral.get_solution_data
      
      
      Spectral.hide_legend
      
      
      Spectral.import_traces
      
      
      Spectral.jsonalize_tree
      
      
      Spectral.suppress_all
      
      
      Spectral.unsuppress_all
      
      
      Spectral.update_expressions_with_defaults
      
      
      Spectral.update_property
      
      
      Spectral.update_trace_in_report
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Spectral.adjust_coherent_gain
      Spectral.children
      Spectral.command
      Spectral.differential_pairs
      Spectral.display_families_options
      Spectral.display_families_type
      Spectral.domain
      Spectral.expressions
      Spectral.internal_plot_name
      Spectral.kaiser_coeff
      Spectral.limit_lines
      Spectral.matrix
      Spectral.max_frequency
      Spectral.noise_threshold
      Spectral.notes
      Spectral.plot_continous_spectrum
      Spectral.plot_name
      Spectral.polyline
      Spectral.primary_sweep
      Spectral.primary_sweep_range
      Spectral.properties
      Spectral.public_dir
      Spectral.reduced_matrix
      Spectral.report_category
      Spectral.report_type
      Spectral.secondary_sweep
      Spectral.secondary_sweep_range
      Spectral.time_start
      Spectral.time_stop
      Spectral.traces
      Spectral.use_pulse_in_tdr
      Spectral.variations
      Spectral.window
   
   